--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ bevy = { version = "0.13", default-features = false, features = [
     "default_font",       # Embed a minimal default font for text/UI
 
     # File formats:
-    # "png",    # PNG image format for simple 2D images
+    "png",    # PNG image format for simple 2D images
     # "hdr",    # HDR images
     # "ktx2",   # Preferred format for GPU textures
     # "zstd",   # ZSTD compression support in KTX2 files
